--- a/docs/assets/manifest.json
+++ b/docs/assets/manifest.json
@@ -3,12 +3,12 @@
 	"name": "A new Life",
 	"icons": [
 		{
-			"src": "/assets/icon-192.png",
+			"src": "icon-192.png",
 			"type": "image/png",
 			"sizes": "192x192"
 		},
 		{
-			"src": "/assets/icon-512.png",
+			"src": "icon-512.png",
 			"type": "image/png",
 			"sizes": "512x512"
 		}
