--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
 	"files.exclude": {
-		".vscode": true,
+		".vscode": false,
 		".git": true,
+		"dist": false,
 		"node_modules": true,
-		"docs": true,
 		".gitignore": true,
 		"a-new-life.code-workspace": true,
 		"yarn.lock": true,
