--- a/src/meshes/f.jsonc
+++ b/src/meshes/f.jsonc
@@ -1,15 +1,15 @@
 // Example Mesh: F (Multi-Index-Entwurf)
-// Der Mittelbalken besteht aus einem anderem Material
-// Die Faces sind alles Quads, die Indices sind immer [v0,n0,v1,n1,v3,n2,v3,n3]
-// Für Eventuelle Texturkoordinaten müssten noch mehr Indices vorgehalten werden.
-// Ob dieses Format so gut ist, weiss ich noch nicht.
-// Es macht zwar die gespeicherten Daten kleiner (und damit auch die Browser Übertragungszeit) kürzer,
-// gleichzeitig müssen aber die Finalen Vertexbuffer Aufwendig berechnet werden,
-// da ich vermutlich nicht mehrere IndexBuffer benutzen kann und somit sämtliche
-// Vertexdaten (Position, Normal, UV, VertexGroupData) am selben Index benötige.
+// Der Mittelbalken besteht aus einem anderem Material.
+// Vertices, Normals und UVs werden in getrennten Arrays gespeichert.
+// Normals und UVs sind Optional.
+// Faces sind alles Tris oder Quads und werden per Index im SubMesh referenziert.
+// Je SubMesh muss ein Material und mindestens der VertexIndex angegeben werden.
+// TexturNamen und SkyboxName sind Optional.
+// NormalIndex und UVIndex sind Optional.
+// VertexGroupDaten werden direkt an die Vertices angehängt.
 {
 	"name": "f",
-	"vertices": [
+	"v": [
 		[-1.5, -0.5, 0],
 		[-0.5, -0.5, 0],
 		[-1.5, 0.5, 0],
@@ -35,7 +35,7 @@
 		[-1.5, 0.5, 4.5],
 		[1.5, 0.5, 4.5]
 	],
-	"normals": [
+	"n": [
 		[0, 0, -1],
 		[0, -1, 0],
 		[1, 0, 0],
@@ -43,39 +43,77 @@
 		[-1, 0, 0],
 		[0, 0, 1]
 	],
-	"subMeshes": [{
-		"material": "red",
-		"textures": [],
-		"skybox": null,
-		"indices": [
-			[3, 0, 2, 0, 0, 0, 1, 0],
-			[1, 1, 0, 1, 4, 1, 5, 1],
-			[5, 1, 4, 1, 10, 1, 11, 1],
-			[11, 1, 10, 1, 20, 1, 16, 1],
-			[17, 1, 16, 1, 20, 1, 21, 1],
-			[2, 3, 3, 3, 8, 3, 7, 3],
-			[7, 3, 8, 3, 14, 3, 13, 3],
-			[13, 3, 14, 3, 22, 3, 18, 3],
-			[18, 3, 19, 3, 23, 3, 22, 3],
-			[3, 2, 1, 2, 5, 2, 8, 2],
-			[14, 2, 11, 2, 16, 2, 18, 2],
-			[18, 0, 16, 0, 17, 0, 19, 0],
-			[19, 2, 17, 2, 21, 2, 23, 2],
-			[23, 5, 21, 5, 20, 5, 22, 5],
-			[22, 4, 20, 4, 13, 4, 10, 4],
-			[10, 4, 13, 4, 7, 4, 4, 4],
-			[4, 4, 7, 4, 2, 4, 0, 4]
+	"sub": [{
+		"m": "flat",
+		"a": [{
+			"name": "a_Vertex",
+			"components": "x, y, z"
+		}],
+		"u": [{
+			"name": "u_Transform",
+			"size": 16
+		}, {
+			"name": "u_Color",
+			"size": 4
+		}],
+		"iv": [
+			[3, 2, 0, 1],
+			[1, 0, 4, 5],
+			[5, 4, 10, 11],
+			[11, 10, 20, 16],
+			[17, 16, 20, 21],
+			[2, 3, 8, 7],
+			[7, 8, 14, 13],
+			[13, 14, 22, 18],
+			[18, 19, 23, 22],
+			[3, 1, 5, 8],
+			[14, 11, 16, 18],
+			[18, 16, 17, 19],
+			[19, 17, 21, 23],
+			[23, 21, 20, 22],
+			[22, 20, 13, 10],
+			[10, 13, 7, 4],
+			[4, 7, 2, 0]
+		],
+		"in": [
+			[0, 0, 0, 0],
+			[1, 1, 1, 1],
+			[1, 1, 1, 1],
+			[1, 1, 1, 1],
+			[1, 1, 1, 1],
+			[3, 3, 3, 3],
+			[3, 3, 3, 3],
+			[3, 3, 3, 3],
+			[3, 3, 3, 3],
+			[2, 2, 2, 2],
+			[2, 2, 2, 2],
+			[0, 0, 0, 0],
+			[2, 2, 2, 2],
+			[5, 5, 5, 5],
+			[4, 4, 4, 4],
+			[4, 4, 4, 4],
+			[4, 4, 4, 4]
 		]
 	}, {
-		"material": "blue",
-		"textures": [],
-		"skybox": null,
-		"indices": [
-			[6, 1, 5, 1, 11, 1, 12, 1],
-			[12, 5, 11, 5, 14, 5, 15, 5],
-			[15, 3, 14, 3, 8, 3, 9, 3],
-			[9, 0, 8, 0, 5, 0, 6, 0],
-			[9, 2, 6, 2, 12, 2, 15, 2]
+		"m": "simple",
+		"a": [{
+			"name": "a_position",
+			"components": "x, y, z, 1.0"
+		}],
+		"u": [],
+		"iv": [
+			[6, 5, 11, 12],
+			[12, 11, 14, 15],
+			[15, 14, 8, 9],
+			[9, 8, 5, 6],
+			[9, 6, 12, 15]
+		],
+		"in": [
+			[1, 1, 1, 1],
+			[5, 5, 5, 5],
+			[3, 3, 3, 3],
+			[0, 0, 0, 0],
+			[2, 2, 2, 2]
 		]
 	}]
 }
