--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prebuild:dev": "rimraf dist",
     "build:dev": "webpack --env debug",
     "prebuild:sw": "rimraf lib/worker/serviceworker.*",
-    "build:sw": "webpack --env debug --config webpack.sw.config.js && webpack --env release --config webpack.sw.config.js"
+    "build:sw": "webpack --env debug --config webpack.sw.config.js && webpack --env release --config webpack.sw.config.js",
+    "debug-wat-loader": "node --nolazy --inspect-brk=9229 ./lib/wat-loader/index.js"
   },
   "repository": {
     "type": "none"
@@ -20,6 +21,8 @@
   "devDependencies": {
     "@types/lz-string": "1.3.33",
     "@types/uuid": "3.4.5",
+    "@webassemblyjs/ast": "1.8.5",
+    "@webassemblyjs/wast-parser": "1.8.5",
     "copy-webpack-plugin": "5.0.4",
     "file-loader": "4.2.0",
     "html-webpack-plugin": "3.2.0",
@@ -35,10 +38,5 @@
     "webpack": "4.40.2",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.8.1"
-  },
-  "paths": {
-    "hash-assets-plugin": [
-      "lib/hash-assets-plugin"
-    ]
   }
 }
