--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "prebuild:dev": "rimraf dist",
     "build:dev": "webpack --env debug",
     "prebuild:sw": "rimraf lib/worker/serviceworker.*",
-    "build:sw": "webpack --env debug --config webpack.sw.config.js && webpack --env release --config webpack.sw.config.js",
-    "test": "jasmine"
+    "build:sw": "webpack --env debug --config webpack.sw.config.js && webpack --env release --config webpack.sw.config.js"
   },
   "repository": {
     "type": "none"
@@ -22,14 +21,12 @@
     "@easm/core": "0.2.5",
     "@easm/react": "0.2.3",
     "@easm/ts-plugin-transform": "0.2.5",
-    "@types/jasmine": "3.4.4",
     "@types/lz-string": "1.3.33",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "copy-webpack-plugin": "5.0.4",
     "file-loader": "4.2.0",
     "html-webpack-plugin": "3.2.0",
-    "jasmine": "3.5.0",
     "jsonc-parser": "2.2.0",
     "lz-string": "1.4.4",
     "raw-loader": "3.1.0",
